--- a/public/css/website.css
+++ b/public/css/website.css
@@ -1,6 +1,6 @@
-.form-signin {
-    max-width: 300px;
-    padding: 19px 29px 29px;
+.box-auth {
+    max-width: 200px;
+    padding: 20px 50px;
     margin: 100px auto 20px;
     background-color: #fff;
     border: 1px solid #e5e5e5;
@@ -11,14 +11,7 @@
     -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
     box-shadow: 0 1px 2px rgba(0,0,0,.05);
 }
-.form-signin .form-signin-heading,
-.form-signin .checkbox {
-    margin-bottom: 10px;
-}
-.form-signin input[type="text"],
-.form-signin input[type="password"] {
-    font-size: 16px;
-    height: auto;
-    margin-bottom: 15px;
-    padding: 7px 9px;
+
+.box-auth hr{
+    margin:18px -30px;
 }
