--- a/public/css/bootstrap3_grid.css
+++ b/public/css/bootstrap3_grid.css
@@ -1,3 +1,10 @@
+* {
+    box-sizing: border-box;
+}
+*::before, *::after {
+    box-sizing: border-box;
+}
+
 /* @grid */
 .row {
     margin: 0 auto;
